# claude-code-playground

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml
scripts/: test_zoom_cloud_transcript.py
src/playground/cli/: chat.py  main.py  sync.py
src/playground/connectors/: apple_notes.py  base.py  registry.py  zoom.py
src/playground/core/: audit.py  config.py  exceptions.py  models.py  roster.py  session.py
src/playground/pipeline/: agent_loop.py  entity_cleanup.py  entity_extractor.py  indexer.py
src/playground/providers/: base.py  openai.py  registry.py
src/playground/storage/: db.py
src/playground/tools/: base.py  get_document.py  list_meetings.py  lookup_person.py  registry.py  search_notes.py  search_zoom.py
tests/: test_entity_extractor.py  test_new_tools.py  test_zoom_connector.py
